# worklife-tech-test

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2bb3cc1835c2_add_vacation.py  7f6b3e379e34_first_migration.py  d55be4713c22_create_team_migration.py
app/api/: __init__.py
app/api/routes/: employee.py  health.py  team.py  vacation.py
app/core/: config.py
app/db/: session.py
app/domain/: __init__.py  employee.py  exceptions.py  team.py  vacation.py
app/model/: base.py  employee.py  team.py  vacation.py
app/reporting/: sentry.py
app/repository/: __init__.py  base.py  employee.py  team.py  vacation.py
app/schema/: __init__.py  base.py  employee.py  team.py  vacation.py
app/timeseries/: mongo.py
scripts/: create_db.sql
