[tool.poetry]
name = "worklife-test"
version = "0.3.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
SQLAlchemy = "^2.0"
pydantic = "^2.7"
psycopg2-binary = "^2.9.3"
alembic = "^1.9.4"
fastapi-utils = "^0.7"
typing-inspect = "^0.9.0"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24"
pytest = "^8.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14"
ruff = "^0.8.3"
pylint = "^3.3.2"
isort = "^5.13.2"


[tool.ruff]
target-version = 'py311'

[tool.ruff.lint.per-file-ignores]
"app/model/__init__.py" = ["F403"]
"app/schema/__init__.py" = ["F403"]
"app/repository/__init__.py" = ["F403"]
"app/domain/__init__.py" = ["F403"]


[tool.pylint.REPORTS]
output-format = "colorized"


[tool.pylint."MESSAGE CONTROL"]
disable = [
    "missing-module-docstring",
    "too-many-ancestors",
    "too-few-public-methods",
]


[tool.isort]
profile = "black"
lines_after_imports = 2
